# SemesterCourseScheduler

./: .gitignore  CLAUDE.md  find_port.py  launchLinux.sh  launchWindows.bat  spring 2027.json
backend/: change_list.py  database.py  door_tag_assets.py  door_tag_pdf.py  export.py  faculty_attribute_assets.py  faculty_schedule_pdf.py  main.py  migrate_door_tag_settings.py  migrate_faculty_academic_rank.py  migrate_faculty_attributes.py  migrate_faculty_department_owned.py  migrate_faculty_office.py  migrate_meeting_frequency.py  migrate_meetings.py  migrate_min_office_hours_by_rank.py  migrate_office_hours.py  migrate_office_hours_freeform.py  migrate_pdf_layout_presets.py  migrate_pdf_layout_presets_scope.py  migrate_rename_faculty_rank.py  migrate_room_department_owned.py  migrate_rooms.py  migrate_rooms_v2.py  migrate_scope_door_tag_assets.py  migrate_taughtwith_sort_order.py  migrate_terms_v2.py  models.py  pyproject.toml  requirements.txt  reset_db.py  scheduler.db.bak  scheduler.db.bak-feedback45  scheduler.db.bak-feedback52  scheduler.db.bak-feedback69  schemas.py  seed.py
backend/agents/: agent.py  schedule_audit_agent.py
backend/agents/context/: context.md
backend/conflict/: ConflictAudit.py  ConflictAuditors.py  runner.py
backend/routers/: auth.py  change_list.py  chat.py  constraints.py  courses.py  door_tags.py  faculty.py  faculty_attributes.py  load.py  load_settings.py  meetings.py  office_hours.py  pdf_presets.py  rooms.py  schedule_entries.py  schedule_tables.py  sections.py  static_data.py  terms.py  timeslots.py
devLogs/: buildPlan.md  (+82 more)
(+52 files in other folders)
