[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.102.0",
    "fastapi>=0.136.1",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.28",
    "reportlab>=5.0.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
